erDiagram
  projects {
    int id PK
    string name
    string codename
    string category
    string status
    string summary
    string target_market
    string revenue_model
    string created_at
    string updated_at
    string icon_base64
    string local_path
  }
  tasks {
    int id PK
    int project_id FK
    string title
    string description
    string status
    string priority
    string blocked_by
    datetime due_date
    string completed_at
    string created_at
    string task_type
  }
  decisions {
    int id PK
    int project_id FK
    string topic
    string decision
    string rationale
    string alternatives_considered
    string decided_at
    string last_validated
    string decision_type
    string status
    int resolved_by_task_id FK
    string verified_at
  }
  open_questions {
    int id PK
    int project_id FK
    string question
    string context
    string priority
    int resolved
    string resolution
    string asked_at
    string resolved_at
  }
  session_notes {
    int id PK
    int project_id FK
    datetime session_date
    string summary
    string key_points
    string next_steps
    string chat_url
    string created_at
  }
  code_artifacts {
    int id PK
    int project_id FK
    string name
    string language
    string code
    string purpose
    string file_path
    string version
    string created_at
    string updated_at
  }
  components {
    int id PK
    int project_id FK
    string name
    string type
    string specs
    float price
    string currency
    string vendor
    string url
    string status
    string notes
    string added_at
  }
  competitors {
    int id PK
    int project_id FK
    string name
    string product_name
    string price_range
    string strengths
    string weaknesses
    string url
    string notes
    string analyzed_at
  }
  content_tickler {
    int id PK
    int project_id FK
    string platform
    int total_posts
    int posts_used
    int posts_remaining
    int alert_threshold
    datetime last_checked
    int needs_content
    string notes
    string created_at
    string updated_at
  }
  cross_references {
    int id PK
    string source_table
    int source_id
    string target_table
    int target_id
    string relationship
    string created_at
  }
  documents {
    int id PK
    int project_id FK
    string name
    string type
    string file_path
    string description
    string version
    string created_at
    string updated_at
  }
  posting_schedule {
    int id PK
    int project_id FK
    int week_number
    string day_of_week
    string platform
    string product
    string post_id
    datetime scheduled_date
    string status
    string created_at
  }
  product_opportunities {
    int id PK
    string industry
    string opportunity_name
    string target_market
    string pain_points
    string existing_solutions
    string pricing_landscape
    int opportunity_score
    string notes
    string status
    string researched_at
    string updated_at
  }
  project_assets {
    int id PK
    int project_id FK
    string asset_type
    string asset_name
    string description
    boolean is_primary
    string file_path
    string base64_data
    string created_at
  }
  build_info {
    int id PK
    int project_id FK
    string build_type
    string build_command
    string output_path
    string output_filename
    string prerequisites
    string notes
    datetime created_at
    datetime updated_at
  }
  tasks }o--|| projects : "project_id"
  decisions }o--|| projects : "project_id"
  decisions }o--|| tasks : "resolved_by_task_id"
  open_questions }o--|| projects : "project_id"
  session_notes }o--|| projects : "project_id"
  code_artifacts }o--|| projects : "project_id"
  components }o--|| projects : "project_id"
  competitors }o--|| projects : "project_id"
  content_tickler }o--|| projects : "project_id"
  documents }o--|| projects : "project_id"
  posting_schedule }o--|| projects : "project_id"
  project_assets }o--|| projects : "project_id"
  build_info }o--|| projects : "project_id"